--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -18,6 +18,12 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
+      <!-- https://mvnrepository.com/artifact/io.mosip.kernel/kernel-auth-adapter -->
+      <dependency>
+         <groupId>io.mosip.kernel</groupId>
+         <artifactId>kernel-auth-adapter</artifactId>
+         <version>1.1.5.5</version>
+      </dependency>
       <dependency>
          <groupId>io.mosip.kernel</groupId>
          <artifactId>kernel-core</artifactId>
