--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -309,6 +309,12 @@
 			<artifactId>TSS.Java</artifactId>
 			<version>${tss.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.mosip.kernel/kernel-auth-adapter -->
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-auth-adapter</artifactId>
+			<version>1.1.5.5</version>
+		</dependency>
 	</dependencies>
 	
 <distributionManagement>
