--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,8 @@
-#spring.cloud.config.uri=http://104.211.212.28:51000
-#spring.cloud.config.label=master
-spring.profiles.active=local
+spring.cloud.config.uri=http://localhost:51000/config
+spring.cloud.config.label=1.1.5_v3
+spring.profiles.active=default
+
+
 spring.cloud.config.name=kernel
 spring.application.name=kernel-masterdata-service
 #management.security.enabled=false
